alignment fixes

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -191,3 +191,7 @@ canvas {
   top:0;
   z-index: -1;
 }
+
+.row {
+  margin: 0;
+}
